# zmag

./: .gitignore  .prettierignore  .pylintrc  404.html  LICENSE  MANIFEST.in  README-DEV.md  README-DEVS.md  README.md  TODO.md  app.py  example_sql.py  index.html  main.py  manage.py  mypy.ini  objects.inv  pyproject.toml  run-dev.sh  sitemap.xml  test.py
.DEV_NOTES/: limiter.md
.claude/: __DEV.md
.claude/commands/: ultra-think.md
.github/workflows/: release.yml
api/cli/: index.html
api/graphql/: index.html
api/zeromq/: index.html
applications/: index.html
applications/application/: index.html
applications/commands/: index.html
applications/forms/: index.html
applications/graphql/: index.html
applications/manager/: index.html
applications/types/: index.html
client/: index.html
client/authentication/: index.html
client/intro/: index.html
client/requests/: index.html
client/sub-pull/: index.html
client_tests/: test.py  test_client.py  test_filter.py  zmg_client.py
client_tests/config/: settings.py  spoc.toml
client_tests/fragments/: author.graphql
commands/: index.html
config/: settings.py  spoc.toml
crud/: index.html
css/: extra.css
databases/: index.html
docs/: macros.py  mkdocs.yml
docs/custom_theme/: main.html
docs/docs/: client.md  commands.md  crud.md  index.md  limitations.md  manager.md  motivation.md  pub-push.md  schema.md  settings.md  use-cases.md
examples/basic/: README.md  manage.py
examples/demo/: main.py  manage.py
frontend/: index.html
frontend-dev/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend-dev/src/: app.tsx
frontend/__assets__/: index-BAIVhQLg.js
frontend/__static__/: api.js
js/: bashv1-0-0.js
limitations/: index.html
manager/: index.html
motivation/: index.html
notebook/: Untitled.ipynb
schema/: index.html
scripts/: docs.py  format_markdown.py  linter.py  mcp_init.py  pretty.sh  tests.py  utils.py  versioning.py
search/: search_index.json
server/authentication/: index.html
server/commands/: index.html
server/devices/: index.html
server/forwarder/: index.html
server/intro/: index.html
server/queue/: index.html
server/streamer/: index.html
settings/: index.html
src/: README.md  zmag_installer.py
src/zmag/: __about__.py  __init__.py  admin.py  app.py  base.py  client.py  components.py  crud.py  crud_manager.py  debug_server.py  external.py  framework.py  load_files.py  operations.graphql  server.py  start_project.py  types.py  utils.py  watcher.py  watcher_linter.py
src/zmag/_templates/project/: .gitignore  README.md  main.py  pyproject.toml
src/zmag/_templates/project/config/: settings.py  spoc.toml
templates/base_app/: commands.py  graphql.py  inputs.py  publishers.py  pushers.py  types.py
tests/: __init__.py  example.db
tests/browser-samples/: fragments.graphql
tests/build_test/: example.db  manage.py  pyproject.toml
tests/client/: client.py
tests/config/: __init__.py  settings.py  spoc.toml
tests/device/: device.py
tests/server/: main.py  (+1 more)
use-cases/: index.html
(+220 files in other folders)
