[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "zmag"
dynamic = ["version"]
description = "Craft APIs with ZeroMQ and GraphQL"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
dependencies = ["pyzmq>=26.2.0", "orjson>=3.10.7"]

[project.optional-dependencies]
debug = ["uvicorn[standard]>=0.30.6", "starlette>=0.38.2", "watchdog>=4.0.2"]
server = [
    "strawberry-graphql>=0.237.3",
    "click>=8.1.7",
    "spoc>=0.2.2",
    "click-help-colors>=0.9.4",
]

[tool.pdm]
version = { source = "file", path = "src/zmag/__about__.py" }
distribution = true

[tool.pdm.build]
# package-dir = "src"
# includes = ["src", "README.md", "LICENSE"]
excludes = ["tests"]

[tool.pdm.dev-dependencies]
lint = [
    "pyright>=1.1.377",
    "mypy>=1.11.1",
    "isort>=5.13.2",
    "black>=24.8.0",
    "pylint>=3.2.6",
    "ruff>=0.6.2",
    "bandit>=1.7.9",
    "watchdog>=4.0.2",
    "ssort>=0.13.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.32",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocstrings[python]>=0.25.2",
    "termynal>=0.12.1",
]
test = ["pytest>=7.1.2", "pytest-asyncio>=0.19.0", "pytest-json-report>=1.5.0"]
