[project]
name = "zmag"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
