[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "A zmag project."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "zmag",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.uv]
package = false

[tool.pyright]
reportInvalidTypeForm = "none"
